--- a/app/globals.css
+++ b/app/globals.css
@@ -2,25 +2,4 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-
-    --gray: rgb(80, 80, 80);
-
-    --primary-blue: #3284C2;
-    --primary-blue-hover: #2673AF;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
+/* Add any custom styles needed */
